2003-11-05  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/html.c (html_output_head): append node name to title if
	splitting.  Escape special chars in title.

	* makeinfo/node.c (cm_node): removed <link> elements from HTML node
	navigation <div> as they are only allowed in <head>.

2003-11-05  Alper Ersoy  <dirt@gtk.org>

	* doc/texinfo.txi (Installing Dir Entries): fixed @uref for Free
	Software Directory.
	(Command List): Escaped @/.

	* info/display.c (handle_tag, handle_tag_start, handle_tag_end): new
	functions.
	(display_update_one_window): ignore the text between magic
	tags/cookies.

	* makeinfo/cmds.c (cm_dots, cm_enddots): use insert_string() for HTML
	to avoid escaping.
	(cm_bullet): use entity name (bull) instead of number (149).

	* makeinfo/index.c (cm_printindex): escape expanded_index.

	* makeinfo/lang.c (cm_accent_generic_html): handle @dotless{i}
	correctly.
	(cm_special_char): use entity names for @OE (OElig) and @oe (oelig)
	instead of numbers.

	* makeinfo/node.c (cm_node): escape node names in HTML output.

	* makeinfo/xml.c (xml_id): check to see if the character is allowed.
	
	* makeinfo/tests/accent-text.txi: new @dotless{j} lines.

	* makeinfo/tests/accent: look for &acute;j instead of &acute;i.

	* TODO: removed item about @dotless in HTML output.

2003-11-04  Karl Berry  <karl@gnu.org>

	* util/Makefile.am (EXTRA_DIST): spurious space after trailing
	backslash.

	* configure.ac (AC_PREREQ): 2.58.

2003-11-03  Karl Berry  <karl@gnu.org>

	* util/Makefile.am (EXTRA_DIST): add gdoc.

2003-11-02  Karl Berry  <karl@gnu.org>

	* util/gendocs.sh: doc fix.

	* doc/texinfo.txi (Using Texinfo): merge most details into ...
	(Output Formats): ... this section.

	* util/dir-example (VM): add.

Sat Nov  1 14:57:46 2003  Alper Ersoy  <dirt@gtk.org>

	* doc/texinfo.txi (Conditional Commands): Docbook text should
		really use @ifdocbook.

	* info/info.c (raw_escapes_p): 1 by default.
	(long_options): new option no-raw-escapes.